--- a/scss/style.css
+++ b/scss/style.css
@@ -405,6 +405,9 @@ button {
   .about, .mini-games {
     padding-top: 48px;
   }
+  .mini-games__games {
+    padding-bottom: 12px;
+  }
   .mini-games__box {
     padding: 2.6rem;
   }
@@ -500,7 +503,7 @@ button {
   }
   .animated-strip {
     gap: 27px;
-    padding: 1.6rem 2.2rem;
+    padding: 0.8rem 2.2rem;
   }
 }
 @media (max-width: 425px) {
