Сделал 6 игру, плавный скролл и стрелку для возвращения на гл.экран, а так же полосу прокрутки

--- a/scss/style.css
+++ b/scss/style.css
@@ -82,10 +82,12 @@ button {
 
 .animated-strip {
   background-color: #BCEC30;
+  padding: 1.6875rem 3.0625rem;
+  overflow: hidden;
+}
+.animated-strip__scroll {
   display: flex;
   gap: 51px;
-  overflow: hidden;
-  padding: 1.6875rem 3.0625rem;
   align-items: center;
 }
 .animated-strip__text {
@@ -101,6 +103,7 @@ button {
   background-color: #202027;
   padding-bottom: 144px;
   overflow: hidden;
+  transition: background-color 2s ease;
 }
 
 .about, .mini-games {
@@ -240,6 +243,19 @@ button {
 .mini-games__star_4 {
   bottom: -99px;
   right: -69px;
+}
+
+.arrow {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 8px 10px;
+  border-radius: 30px;
+  position: fixed;
+  right: 150px;
+  bottom: 150px;
+  display: none;
+}
+.arrow__link {
+  color: white;
 }
 
 .footer {
